centos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centos
  namespace: default
  labels:
    app: centos
spec:
  progressDeadlineSeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: centos
  template:
    metadata:
      labels:
        app: centos
    spec:
      containers:
        - name: centos
          image: docker.io/centos:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 100;done"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "80m"
