fedora.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedora
  labels:
    app: fedora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fedora
  template:
    metadata:
      labels:
        app: fedora
    spec:
      containers:
        - name: fedora
          image: tchellomello/fedora:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 10;done"]
          resources:
            limits:
              memory: "256Mi"
              cpu: "80m"
