pgadmin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pgadmin-nfs-data
              mountPath: /var/lib/pgadmin
 
      volumes:
      - name: pgadmin-nfs-data
        persistentVolumeClaim:
          claimName: pgadmin-claim
#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
# name: pgadmin-nfs-data
#spec:
#  persistentVolumeReclaimPolicy: Retain
#  storageClassName: nfs-kube
#  capacity:
#    storage: 5Gi
#  accessModes:
#   - ReadWriteMany
#  nfs:
#    server: 192.168.169.51
#    path: "/volume1/k8s_global/pgadmin_data"
---
apiVersion: v1  
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
    protocol: TCP
  selector:
    app: pgadmin
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
spec:
  entryPoints:
   - web
  routes:
    - match: Host(`pgadmin.zircon.local`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
      - name: pgadmin
        port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-https
spec:
  entryPoints:
   - websecure
  routes:
    - match: Host(`pgadmin.zircon.local`)
#      middlewares:
#        - name: traefik-fa
#        - name: error-pages
#        - name: error-pages-redirect
      kind: Rule
      services:
      - name: pgadmin
        port: 80
  tls:
    secretName: zircon.local.certs
